--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+
+
+
 # Compiled source #
 ###################
 *.com
@@ -35,3 +51,4 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+/.metadata/
